samples/_failures_safe/1761317000_130ec2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6fa6fb75.c: In function ‘main’:
./samples/SAFE/__tmp_6fa6fb75.c:179:5: error: expected identifier or ‘(’ at end of input
  179 |     for (int
      |     ^~~
./samples/SAFE/__tmp_6fa6fb75.c:179:5: error: expected declaration or statement at end of input
